objects/amc__Phase__c.object
<CustomObject>
    <fields>
        <fullName>amc__Complete_Actions__c</fullName>
        <inlineHelpText>Counts all Actions relating to Milestones within this Phase where the Action Status = Complete</inlineHelpText>
        <label>Complete Actions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amc__End_Date__c</fullName>
        <inlineHelpText>Identifies the latest End Date of Actions within Milestones relating to this Phase</inlineHelpText>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>amc__Hours_Completed_Billable__c</fullName>
        <inlineHelpText>Identifies the number of Billable Hours Completed on all Actions relating to Milestones within this Phase</inlineHelpText>
        <label>Hours Completed - Billable</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amc__Hours_Completed_Non_Billable__c</fullName>
        <inlineHelpText>Identifies the number of Non Billable Hours Completed on all Actions relating to Milestones within this Phase</inlineHelpText>
        <label>Hours Completed - Non Billable</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amc__Hours_Completed_Value_Billable__c</fullName>
        <inlineHelpText>Identifies the Completed Billable Value of all Actions relating to Milestones within this Phase</inlineHelpText>
        <label>Hours Completed Value (Billable)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>amc__Hours_Completed_Value_Cost__c</fullName>
        <inlineHelpText>Identifies the Completed Cost Value of all Actions relating to Milestones within this Phase</inlineHelpText>
        <label>Hours Completed Value (Cost)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>amc__Hours_Remaining_Billable__c</fullName>
        <inlineHelpText>Identifies the number of Billable Hours Remaining on all Actions relating to Milestones within this Phase</inlineHelpText>
        <label>Hours Remaining - Billable</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amc__Hours_Remaining_Non_Billable__c</fullName>
        <inlineHelpText>Identifies the number of Non Billable Hours Remaining on all Actions relating to Milestones within this Phase</inlineHelpText>
        <label>Hours Remaining - Non Billable</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amc__Hours_Remaining_Value_Billable__c</fullName>
        <inlineHelpText>Identifies the Remaining Billable Value of all Actions relating to Milestones within this Phase</inlineHelpText>
        <label>Hours Remaining Value (Billable)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>amc__Hours_Remaining_Value_Cost__c</fullName>
        <inlineHelpText>Identifies the Remaining Cost Value of all Actions relating to Milestones within this Phase</inlineHelpText>
        <label>Hours Remaining Value (Cost)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>amc__Hours_Scheduled_Billable__c</fullName>
        <inlineHelpText>Identifies the number of Billable Hours Scheduled on all Actions relating to Milestones within this Phase</inlineHelpText>
        <label>Hours Scheduled - Billable</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amc__Hours_Scheduled_Non_Billable__c</fullName>
        <inlineHelpText>Identifies the number of Non Billable Hours Scheduled on all Actions relating to Milestones within this Phase</inlineHelpText>
        <label>Hours Scheduled - Non Billable</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amc__Hours_Scheduled_Value_Billable__c</fullName>
        <inlineHelpText>Identifies the Scheduled Billable Value of all Actions relating to Milestones within this Phase</inlineHelpText>
        <label>Hours Scheduled Value (Billable)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>amc__Hours_Scheduled_Value_Cost__c</fullName>
        <inlineHelpText>Identifies the Scheduled Cost Value of all Actions relating to Milestones within this Phase</inlineHelpText>
        <label>Hours Scheduled Value (Cost)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>amc__Phase_Completion_Status__c</fullName>
        <formula>IF(ISPICKVAL(amc__Status__c, &quot;Complete&quot;), 1, 
 IF(
  OR(amc__Total_Hours_Scheduled__c == 0, amc__Total_Hours_Completed__c == 0), 
  (amc__Complete_Actions__c  / amc__Total_Actions__c) ,
   (amc__Total_Hours_Completed__c / (amc__Total_Hours_Completed__c + amc__Total_Projected_Hours_Remaining__c)) 
  
))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>If Status = Complete, will display 100%. If Total Hours Scheduled or Total Hours Completed = 0 will be Completed Actions / Total Actions, otherwise Total Hours Completed / (Total Hours Completed + Total Projected Hours Remaining)</inlineHelpText>
        <label>Phase Completion Status</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>amc__Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Identifies the Project this Phase relates to</inlineHelpText>
        <label>Project</label>
        <referenceTo>amc__Project__c</referenceTo>
        <relationshipLabel>Phases</relationshipLabel>
        <relationshipName>Phases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>amc__Projected_Hours_Remaining_Billable__c</fullName>
        <inlineHelpText>Identifies the projected number of Billable Hours Remaining on all Actions relating to Milestones within this Phase</inlineHelpText>
        <label>Projected Hours Remaining - Billable</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amc__Projected_Hours_Remaining_Non_Billable__c</fullName>
        <inlineHelpText>Identifies the projected number of Non Billable Hours Remaining on all Actions relating to Milestones within this Phase</inlineHelpText>
        <label>Projected Hours Remaining - Non Billable</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amc__Projected_Total_Hours_Billable__c</fullName>
        <inlineHelpText>Identifies the total projected number of Billable Hours on all Actions relating to Milestones within this Phase</inlineHelpText>
        <label>Projected Total Hours - Billable</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amc__Projected_Total_Hours_Non_Billable__c</fullName>
        <inlineHelpText>Identifies the total projected number of Non Billable Hours on all Actions relating to Milestones within this Phase</inlineHelpText>
        <label>Projected Total Hours - Non Billable</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amc__Projected_Total_Hours__c</fullName>
        <formula>amc__Projected_Total_Hours_Billable__c + amc__Projected_Total_Hours_Non_Billable__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula: Sum of ‘Projected Total Hours - Billable’ + &apos;Projected Total Hours - Non Billable&apos;</inlineHelpText>
        <label>Projected Total Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amc__Start_Date__c</fullName>
        <inlineHelpText>Identifies the earliest Start Date of Actions within Milestones relating to this Phase</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>amc__Status__c</fullName>
        <inlineHelpText>Identifies the Status of the Phase</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Planned</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>On Hold</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>amc__Total_Actions__c</fullName>
        <inlineHelpText>Counts all Actions relating to Milestones within this Phase</inlineHelpText>
        <label>Total Actions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amc__Total_Hours_Completed__c</fullName>
        <formula>amc__Hours_Completed_Billable__c + amc__Hours_Completed_Non_Billable__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula: Sum of ‘Hours Completed - Billable’ + &apos;Hours Completed - Non Billable&apos;</inlineHelpText>
        <label>Total Hours Completed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amc__Total_Hours_Remaining__c</fullName>
        <formula>amc__Hours_Remaining_Billable__c  +  amc__Hours_Scheduled_Non_Billable__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula: Sum of ‘Hours Remaining - Billable’ + &apos;Hours Remaining - Non Billable&apos;</inlineHelpText>
        <label>Total Hours Remaining</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amc__Total_Hours_Scheduled__c</fullName>
        <formula>amc__Hours_Scheduled_Billable__c + amc__Hours_Scheduled_Non_Billable__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula: Sum of ‘Hours Scheduled - Billable’ + &apos;Hours Scheduled - Non Billable&apos;</inlineHelpText>
        <label>Total Hours Scheduled</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amc__Total_Projected_Hours_Remaining__c</fullName>
        <formula>amc__Projected_Hours_Remaining_Billable__c + amc__Projected_Hours_Remaining_Non_Billable__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula: Sum of ‘Projected Hours Remaining - Billable’ + &apos;Projected Hours Remaining - Non Billable&apos;</inlineHelpText>
        <label>Total Projected Hours Remaining</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Phase</label>
    <listViews>
        <fullName>amc__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Phase Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Phases</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>